# amplifier-bundle-rust-dev

./: README.md  bundle.yaml  pyproject.toml
agents/: code-intel.md  rust-dev.md
behaviors/: rust-dev.yaml  rust-lsp.yaml  rust-quality.yaml
context/: RUST_BEST_PRACTICES.md  rust-dev-instructions.md  rust-lsp.md
modules/hooks-rust-check/: pyproject.toml
modules/hooks-rust-check/amplifier_module_hooks_rust_check/: __init__.py
modules/tool-rust-check/: pyproject.toml
modules/tool-rust-check/amplifier_module_tool_rust_check/: __init__.py
tests/: test_bundle_composition.py
